--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
   ],
   "license": "ISC",
   "dependencies": {
-
+    "async": "^1.5.0"
   },
   "devDependencies": {
     "browser-sync": "^2.8.2",
-    "del": "^1.2.1",
+    "del": "^2.1.0",
     "gulp": "^3.9.0",
-    "gulp-debug": "^2.1.0",
-    "gulp-inject": "^1.5.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-tslint": "^3.2.0",
-    "gulp-typescript": "^2.8.0",
+    "gulp-babel": "^5.3.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-inject": "^3.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-tsd": "^0.0.4",
-    "tsd": "^0.6.3",
-    "superstatic": "^1.2.3"
+    "gulp-tslint": "^4.0.1",
+    "gulp-typescript": "^2.9.2",
+    "superstatic": "^3.0.0",
+    "tsd": "^0.6.5",
+    "tslint": "^3.0.0",
+    "typescript": "^1.8.0-dev.20151128"
   }
 }
