--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "sourceMap": true
+        "experimentalAsyncFunctions": true,
+        "target": "ES6",
+        "removeComments": true
     }
 }
